# cyphal-reassemble

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
docs/superpowers/plans/: 2026-07-03-cyphal-reassemble-implementation.md  2026-07-03-cyphal-reassemble-platform-wheels.md  2026-07-03-cyphal-reassemble-python-wrapper.md
docs/superpowers/specs/: 2026-07-03-cyphal-reassemble-design.md  2026-07-03-cyphal-reassemble-platform-wheels-design.md  2026-07-03-cyphal-reassemble-python-wrapper-design.md
py/cyphal_reassemble/: __init__.py  _backend.py  reassemble.py  schema.py
python_tests/: conftest.py  test_backend.py  test_reassemble.py  test_schema.py
scripts/: build_wheel.sh  install_arrow_cpp.sh  prepare_wheel_bundle.sh  test_installed_wheel.sh
src/: arrow_io.cpp  arrow_io.h  can_id.c  can_id.h  main.cpp  reassembler.cpp  reassembler.h  transfer.h  usage.cpp  usage.h
test/: test_arrow_io.cpp  test_can_id.cpp  test_golden.cpp  test_reassembler.cpp
tests/data/: frames_CAN1.arrows  frames_CAN2.arrows  transfers_CAN1.arrows  transfers_CAN2.arrows
tools/: export_fixtures.py
