[project]
name = "cyphal-reassemble"
version = "0.1.0"
description = "Fast Cyphal/CAN transfer reassembly (Python wrapper over libcanard binary)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.15"
dependencies = [
    "pyarrow>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
sources = ["py"]
# Include staged _bin/cyphal-reassemble even though it is gitignored locally.
ignore-vcs = true

[tool.cibuildwheel]
build = "cp312-manylinux_x86_64"
archs = ["x86_64"]
manylinux-x86_64-image = "manylinux_2_28"
before-all = "bash scripts/install_arrow_cpp.sh"
before-build = "pip install auditwheel patchelf build wheel hatchling"
build-command = "bash scripts/build_wheel.sh {output_dir}"
test-command = "bash scripts/test_installed_wheel.sh {project}"

[tool.hatch.build.targets.sdist]
include = [
  "/py/cyphal_reassemble",
  "/python_tests",
  "/scripts",
  "/tests/data",
]

[tool.pytest.ini_options]
testpaths = ["python_tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
