[project]
name = "cyphal-reassemble"
version = "0.1.0"
description = "Fast Cyphal/CAN transfer reassembly (Python wrapper over libcanard binary)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.15"
dependencies = [
    "pyarrow>=15.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
sources = ["py"]
# Include staged _bin/cyphal-reassemble even though it is gitignored locally.
ignore-vcs = true

[tool.pytest.ini_options]
testpaths = ["python_tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
